feat: group allocation card segments by instrument type