@@ -1,17 +1,15 @@
 package com.topably.assets.portfolios.service.cards.producer;
 
 import com.topably.assets.exchanges.service.ExchangeService;
-import com.topably.assets.portfolios.domain.Portfolio;
 import com.topably.assets.portfolios.domain.cards.CardContainerType;
 import com.topably.assets.portfolios.domain.cards.CardData;
 import com.topably.assets.portfolios.domain.cards.input.AllocationCard;
 import com.topably.assets.portfolios.domain.cards.output.AllocationCardData;
 import com.topably.assets.portfolios.domain.cards.output.AllocationSegment;
+import com.topably.assets.portfolios.domain.dto.PortfolioHoldingDto;
 import com.topably.assets.portfolios.service.PortfolioHoldingService;
 import com.topably.assets.portfolios.service.PortfolioService;
 import com.topably.assets.portfolios.service.cards.CardStateProducer;
-import com.topably.assets.portfolios.domain.dto.PortfolioHoldingDto;
-import com.topably.assets.trades.service.TradeService;
 import com.topably.assets.xrates.service.currency.CurrencyService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -24,6 +22,7 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 
+import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.toList;
 
 @Service(CardContainerType.ALLOCATION)
@@ -40,25 +39,41 @@ public class AllocationCardStateProducer implements CardStateProducer<Allocation
     @Transactional
     public CardData produce(Principal user, AllocationCard card) {
         var portfolio = portfolioService.findByUsername(user.getName());
-        var portfolioHoldingDtos = portfolioHoldingService.findPortfolioHoldings(portfolio.getId());
-        var segments = portfolioHoldingDtos.stream()
-                .map(this::convertToSegment)
-                .sorted(Comparator.comparing(AllocationSegment::getValue).reversed())
-                .collect(toList());
+        var holdings = portfolioHoldingService.findPortfolioHoldings(portfolio.getId());
+        var holdingByTypes = holdings.stream()
+                .collect(groupingBy(PortfolioHoldingDto::getInstrumentType));
+        var segments = holdingByTypes.entrySet().stream()
+                .map(byType -> {
+                    var childSegments = convertToSegments(byType.getValue());
+                    return AllocationSegment.builder().name(byType.getKey())
+                            .value(calculateSegmentsTotalValue(childSegments))
+                            .children(childSegments)
+                            .build();
+                }).toList();
         return AllocationCardData.builder()
                 .segments(segments)
-                .investedValue(calculateInvestedValue(segments))
-                .currentValue(calculateCurrentValue(portfolioHoldingDtos))
+                .investedValue(calculateSegmentsTotalValue(segments))
+                .currentValue(calculateCurrentValue(holdings))
                 .build();
     }
 
-    private AllocationSegment convertToSegment(PortfolioHoldingDto trade) {
-        var name = trade.getIdentifier().toString();
-        var price = currencyService.convert(trade.getTotal(), trade.getCurrency());
-        return new AllocationSegment(name, price);
+    private List<AllocationSegment> convertToSegments(Collection<PortfolioHoldingDto> holdings) {
+        return holdings.stream()
+                .map(this::convertToSegment)
+                .sorted(Comparator.comparing(AllocationSegment::getValue).reversed())
+                .collect(toList());
     }
 
-    private BigDecimal calculateInvestedValue(List<AllocationSegment> segments) {
+    private AllocationSegment convertToSegment(PortfolioHoldingDto holding) {
+        var name = holding.getIdentifier().toString();
+        var price = currencyService.convert(holding.getTotal(), holding.getCurrency());
+        return AllocationSegment.builder()
+                .name(name)
+                .value(price)
+                .build();
+    }
+
+    private BigDecimal calculateSegmentsTotalValue(List<AllocationSegment> segments) {
         return segments.stream()
                 .map(AllocationSegment::getValue)
                 .reduce(BigDecimal.ZERO, BigDecimal::add)
